--- a/_data/google-drive-two/manifest.json
+++ b/_data/google-drive-two/manifest.json
@@ -5,7 +5,7 @@
     "label": { "en": [ "Google Drive Two" ] },
     "homepage": [
       {
-        "id": "",
+        "id": "Home page for Google Drive Two",
         "type": "Text",
         "label": { "en": [ "Home page for Google Drive Two" ] },
         "format": "text/html"
@@ -23,6 +23,14 @@
         "id": "https://kywark.github.io/link-tests/google-drive-two/canvas-1/canvas",
         "type": "Canvas",
         "duration": 17,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/google-drive-two/canvas-1/canvas/full.json",
+            "label": "full"
+          }
+        ],
         "items": [
           {
             "id": "https://kywark.github.io/link-tests/google-drive-two/canvas-1/paintings",
@@ -33,7 +41,7 @@
                 "type": "Annotation",
                 "motivation": "painting",
                 "body": {
-                  "id": "https://drive.google.com/uc?id=1Win8_fBgBxoPA4WvBmNQeMzkmiEakAb6&amp;authuser=0&amp;export=download",
+                  "id": "https://drive.google.com/uc?id=1Win8_fBgBxoPA4WvBmNQeMzkmiEakAb6&amp;amp;authuser=0&amp;amp;export=download",
                   "type": "Sound",
                   "format": "audio/mp3",
                   "duration": 17
