--- a/_data/margaret-atwood-at-sgwu-1974/manifest.json
+++ b/_data/margaret-atwood-at-sgwu-1974/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas",
         "type": "Canvas",
         "duration": 3587.0,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas/Full.json",
+            "label": "Full"
+          }
+        ],
         "items": [
           {
             "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/paintings",
