Updated Margaret Atwood at SGWU 1974

--- a/_data/margaret-atwood-at-sgwu-1974/manifest.json
+++ b/_data/margaret-atwood-at-sgwu-1974/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas/n_layer.json",
+            "label": "n_layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas/S_layer.json",
             "label": "S_layer"
           }
