--- a/_data/margaret-atwood-at-sgwu-1974/manifest.json
+++ b/_data/margaret-atwood-at-sgwu-1974/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas/e_layer.json",
+            "label": "e_layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/margaret-atwood-at-sgwu-1974/canvas-1/canvas/S_layer.json",
             "label": "S_layer"
           }
