--- a/_data/margaret-atwood-1974/manifest.json
+++ b/_data/margaret-atwood-1974/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/margaret-atwood-1974/canvas-1/canvas/N_Layer.json",
+            "label": "N_Layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/margaret-atwood-1974/canvas-1/canvas/E_Layer.json",
             "label": "E_Layer"
           }
