--- a/_data/anthony-hecht-at-sgwu-1966/manifest.json
+++ b/_data/anthony-hecht-at-sgwu-1966/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas",
         "type": "Canvas",
         "duration": 2816.0,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas/S_Layer.json",
+            "label": "S_Layer"
+          }
+        ],
         "items": [
           {
             "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/paintings",
