--- a/_data/anthony-hecht-at-sgwu-1966/manifest.json
+++ b/_data/anthony-hecht-at-sgwu-1966/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas/S_Layer.json",
             "label": "S_Layer"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas/E_Layer.json",
+            "label": "E_Layer"
+          }
         ],
         "items": [
           {
