--- a/_data/anthony-hecht-at-sgwu-1966/manifest.json
+++ b/_data/anthony-hecht-at-sgwu-1966/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas/T_Layer.json",
+            "label": "T_Layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/anthony-hecht-at-sgwu-1966/canvas-1/canvas/S_Layer.json",
             "label": "S_Layer"
           }
