--- a/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
+++ b/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas",
         "type": "Canvas",
         "duration": 2808.0,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/S_Layer.json",
+            "label": "S_Layer"
+          }
+        ],
         "items": [
           {
             "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/paintings",
