--- a/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
+++ b/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/S_Layer.json",
             "label": "S_Layer"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/E_Layer.json",
+            "label": "E_Layer"
+          }
         ],
         "items": [
           {
