--- a/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
+++ b/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/N_Layer.json",
+            "label": "N_Layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/E_Layer.json",
             "label": "E_Layer"
           }
