--- a/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
+++ b/_data/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/T_Layer.json",
+            "label": "T_Layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/link-tests/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968/canvas-1/canvas/S_Layer.json",
             "label": "S_Layer"
           }
