--- a/_data/allen-ginsberg-at-sgwu-1969/manifest.json
+++ b/_data/allen-ginsberg-at-sgwu-1969/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://kywark.github.io/link-tests/allen-ginsberg-at-sgwu-1969/canvas-1/canvas",
         "type": "Canvas",
         "duration": 3712,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/link-tests/allen-ginsberg-at-sgwu-1969/canvas-1/canvas/S_Layer.json",
+            "label": "S_Layer"
+          }
+        ],
         "items": [
           {
             "id": "https://kywark.github.io/link-tests/allen-ginsberg-at-sgwu-1969/canvas-1/paintings",
