--- a/_data/allen-ginsberg-at-sgwu-1969/manifest.json
+++ b/_data/allen-ginsberg-at-sgwu-1969/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/gentle-improvement/allen-ginsberg-at-sgwu-1969/canvas-1/canvas/n_layer.json",
+            "label": "N_Layer"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/gentle-improvement/allen-ginsberg-at-sgwu-1969/canvas-1/canvas/s_layer.json",
             "label": "S_Layer"
           }
