--- a/_data/allen-ginsberg-at-sgwu-1969/manifest.json
+++ b/_data/allen-ginsberg-at-sgwu-1969/manifest.json
@@ -42,6 +42,12 @@
             "id": "https://kywark.github.io/gentle-improvement/allen-ginsberg-at-sgwu-1969/canvas-1/canvas/s_layer.json",
             "label": "S_Layer"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://kywark.github.io/gentle-improvement/allen-ginsberg-at-sgwu-1969/canvas-1/canvas/e_layer.json",
+            "label": "E_Layer"
+          }
         ],
         "items": [
           {
