--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,1 +1,5 @@
 # Navigation for the site
+- pages/allen-ginsberg-at-sgwu-1969.md
+- pages/anthony-hecht-at-sgwu-1966.md
+- pages/bpnichol-and-lionel-kearns-at-sgwu-pt-2-1968.md
+- pages/margaret-atwood-1974.md
